3707.	[bug]		irs_resconf_load now returns ISC_R_FILENOTFOUND
			on a missing resolv.conf file and initializes the
			structure as if it had been configured with:

				nameserver ::1
				nameserver 127.0.0.1

			Note: Callers will need to be updated to treat
			ISC_R_FILENOTFOUND as a qualified success or else
			they will leak memory. The following code fragment
			will work with both only and new versions without
			changing the behaviour of the existing code.

			resconf = NULL;
			result = irs_resconf_load(mctx, "/etc/resolv.conf",
						  &resconf);
			if (result != ISC_SUCCESS) {
				if (resconf != NULL)
					irs_resconf_destroy(&resconf);
				....
			}

			[RT #35194]

3706.	[contrib]	queryperf: Fixed a possible integer overflow when
			printing results. [RT #35182]

3704.	[protocol]	Accept integer timestamps in RRSIG records. [RT #35185]

	--- 9.9.5rc1 released ---

3701.	[func]		named-checkconf can now obscure shared secrets
			when printing by specifying '-x'. [RT #34465]

3699.	[bug]		Improvements to statistics channel XSL stylesheet:
			the stylesheet can now be cached by the browser;
			section headers are omitted from the stats display
			when there is no data in those sections to be
			displayed; counters are now right-justified for
			easier readability. (Only available with
			configure --enable-newstats.) [RT #35117]

3698.	[cleanup]	Replaced all uses of memcpy() with memmove().
			[RT #35120]

3697.	[bug]		Handle "." as a search list element when IDN support
			is enabled. [RT #35133]

3696.	[bug]		dig failed to handle AXFR style IXFR responses which
			span multiple messages. [RT #35137]

3695.	[bug]		Address a possible race in dispatch.c. [RT #35107]

3694.	[bug]		Warn when a key-directory is configured for a zone,
			but does not exist or is not a directory. [RT #35108]

3693.	[security]	memcpy was incorrectly called with overlapping
			ranges resulting in malformed names being generated
			on some platforms.  This could cause INSIST failures